# llm-observatory

./: .dockerignore  .env.example  .gitignore  AUTO_PUBLISH.md  BACKUP_INFRASTRUCTURE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_TEST_REPORT.md  LICENSE  Makefile  NOTICE  PUBLISHING.md  PUBLISHING_SIMPLE.md  README.md  docker-compose.app.yml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/upstream/: infra.rs  mod.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/collector/: Cargo.toml  README.md
crates/collector/src/: config.rs  lib.rs  main.rs  sampler.rs
crates/collector/src/processor/: cost.rs  mod.rs  pii.rs
crates/collector/src/receiver/: mod.rs  otlp.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: error.rs  lib.rs  provider.rs  span.rs  types.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: anthropic.rs  lib.rs  openai.rs  pricing.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/examples/: basic.rs  cost_tracking.rs  custom_attributes.rs  error_handling.rs  streaming.rs
crates/sdk/src/: cost.rs  error.rs  instrument.rs  lib.rs  observatory.rs  openai.rs  traits.rs
crates/sdk/tests/: integration_test.rs
crates/storage/: .env.example  BENCHMARKS.md  BOOTSTRAP_SUMMARY.md  COPY_PROTOCOL.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_NOTES.md  QUERY_REPOSITORY_SUMMARY.md  QUICKSTART.md  README.md  REPOSITORY_IMPLEMENTATION.md  STATUS.md  TESTING.md  USAGE.md
crates/storage/.sqlx/: .gitkeep
crates/storage/benches/: BENCHMARK_SUMMARY.md  PERFORMANCE_TUNING.md  QUICKSTART.md  README.md  concurrent_writes.rs  copy_vs_insert.rs  mixed_workload.rs  pool_performance.rs  query_performance.rs  writer_throughput.rs
crates/storage/benches/common/: mod.rs
crates/storage/docs/: BATCH_WRITER.md  UUID_RESOLUTION.md  UUID_RESOLUTION_IMPLEMENTATION_SUMMARY.md
crates/storage/examples/: batch_writer_example.rs  copy_protocol.rs  monitoring_example.rs
crates/storage/migrations/: .gitkeep  001_initial_schema.sql  002_add_hypertables.sql  003_create_indexes.sql  004_FIX_SUMMARY.md  004_MIGRATION_NOTES.md  004_continuous_aggregates.sql  005_retention_policies.sql  006_supporting_tables.sql  007_fulltext_search.sql  008_export_jobs.sql  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_REPORT.md  MIGRATION_SUMMARY.md  QUICK_REFERENCE.sql  README.md  deploy_004.sh  percentile_queries.sql  test_004_continuous_aggregates.sql  verify_migrations.sql
crates/storage/src/: config.rs  error.rs  health.rs  lib.rs  metrics.rs  pool.rs  validation.rs
crates/storage/src/models/: log.rs  metric.rs  mod.rs  trace.rs
crates/storage/src/repositories/: instrumented.rs  log.rs  metric.rs  mod.rs  trace.rs
crates/storage/src/writers/: copy.rs  copy_instrumented.rs  instrumented.rs  log.rs  metric.rs  mod.rs  trace.rs
crates/storage/tests/: IMPLEMENTATION_SUMMARY.md  README.md  TEST_INDEX.md  batch_writer_tests.rs  integration_config_test.rs  integration_pool_test.rs  integration_writer_test.rs
crates/storage/tests/common/: database.rs  fixtures.rs  mod.rs
examples/customer-support/sdk/python/: pyproject.toml
examples/customer-support/services/analytics-api/: .env.example  API.md  Cargo.toml  Dockerfile  IMPLEMENTATION_REPORT.md  README.md
examples/customer-support/services/analytics-api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
examples/customer-support/services/analytics-api/src/db/: mod.rs  queries.rs
examples/customer-support/services/analytics-api/src/models/: metrics.rs  (+3 more)
examples/customer-support/services/analytics-api/tests/: integration_test.rs
examples/customer-support/services/chat-api/: .env.example  Dockerfile  README.md  ab_testing.py  cache_manager.py  config.py  cost_optimizer.py  main.py  models.py  pii_detector.py  provider_manager.py  pyproject.toml  requirements.txt  tools_framework.py
examples/customer-support/services/chat-api/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  openai_provider.py
examples/customer-support/services/chat-api/tests/: __init__.py  test_ab_testing.py  test_pii_detector.py  test_providers.py  test_tools.py
sdk/python/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/examples/: anthropic_example.py  basic_openai.py  context_optimizer.py  cost_tracking.py  streaming_openai.py
sdk/python/llm_observatory/: __init__.py  cost.py  instrument.py  observatory.py  optimizers.py  tracing.py
sdk/python/tests/: __init__.py  test_cost.py  test_instrument.py  test_integration.py  test_observatory.py  test_optimizers.py  test_tracing.py
services/analytics-api/: .dockerignore  BETA_LAUNCH_CHECKLIST.md  CICD_IMPLEMENTATION_SUMMARY.md  Cargo.toml  Dockerfile  Makefile  PERFORMANCE_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PHASE1_IMPLEMENTATION.md  PHASE1_SUMMARY.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_PROGRESS.md  PHASE3_COMPLETION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  PHASE6_COMPLETION_SUMMARY.md  PHASE7_COMPLETION_SUMMARY.md  README.md  deny.toml  docker-compose.yml  openapi.yaml
services/analytics-api/benches/: phase2_benchmark.sh
services/analytics-api/docs/: API_REFERENCE.md  DEPLOYMENT.md  GETTING_STARTED.md
services/analytics-api/examples/: client_examples.md
services/analytics-api/src/: errors.rs  lib.rs  main.rs  models.rs
services/analytics-api/src/middleware/: auth.rs  caching.rs  mod.rs  rate_limit.rs
services/analytics-api/src/models/: costs.rs  export.rs  filters.rs  metrics.rs  traces.rs  websocket.rs
services/analytics-api/src/routes/: costs.rs  export.rs  metrics.rs  mod.rs  models.rs  performance.rs  quality.rs  traces.rs
services/analytics-api/src/services/: mod.rs  timescaledb.rs
services/analytics-api/tests/: integration_tests.rs  phase2_integration_tests.rs  phase3_metrics_integration_tests.rs  phase4_costs_integration_tests.rs
services/analytics-api/tests/load/: api-endpoints.js  health-check.js
(+384 files in other folders)
