[workspace]
members = [
    "crates/core",
    "crates/collector",
    "crates/storage",
    "crates/api",
    "crates/sdk",
    "crates/providers",
    "crates/cli",
    "crates/benchmarks",
    "crates/adapters",
    "services/analytics-api",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75.0"
authors = ["LLM Observatory Contributors"]
license = "Apache-2.0"
repository = "https://github.com/globalbusinessadvisors/llm-observatory"
homepage = "https://llm-observatory.io"
documentation = "https://docs.llm-observatory.io"
keywords = ["llm", "observability", "opentelemetry", "monitoring", "tracing"]
categories = ["development-tools::profiling", "web-programming"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
futures = "0.3"

# HTTP/Web
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# OpenTelemetry - using latest compatible versions
opentelemetry = { version = "0.27", features = ["metrics", "trace", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "http-proto"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-proto = "0.27"
tonic = "0.12"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
indicatif = "0.17"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
lazy_static = "1.5"
once_cell = "1.19"
dashmap = "6.1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Security
argon2 = "0.5"
jsonwebtoken = "9.3"
ring = "0.17"

# Testing
mockall = "0.13"

# LLM-Dev-Ops Upstream Dependencies (Phase 2A - Compile-time mandatory)
# Schema Registry - provides schema definitions and validation
schema-registry-core = { git = "https://github.com/LLM-Dev-Ops/schema-registry.git", branch = "main" }
# Config Manager - provides configuration management
llm-config-core = { git = "https://github.com/LLM-Dev-Ops/config-manager.git", branch = "main" }
# Latency Lens - provides latency profiling and metrics
llm-latency-lens-core = { git = "https://github.com/LLM-Dev-Ops/latency-lens.git", branch = "main" }
# CostOps - provides cost analytics and tracking
llm-cost-ops = { git = "https://github.com/LLM-Dev-Ops/cost-ops.git", branch = "main" }
# Sentinel - provides anomaly detection and alerting
llm-sentinel-core = { git = "https://github.com/LLM-Dev-Ops/sentinel.git", branch = "main" }

# LLM-Dev-Ops Upstream Dependencies (Phase 2B - Infra integration)
# Infra - provides foundational utilities for metrics, logging, tracing, config, errors, caching, retry, rate limiting
llm-infra-core = { git = "https://github.com/LLM-Dev-Ops/infra.git", branch = "main", features = ["metrics", "logging", "tracing", "config", "errors", "cache", "retry", "rate-limit"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
