[package]
name = "llm-observatory-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust SDK for LLM Observatory with trait-based instrumentation"

[dependencies]
# Internal
llm-observatory-core = { version = "0.1.1", path = "../core" }
llm-observatory-providers = { version = "0.1.1", path = "../providers" }

# Async
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }

# Streams
tokio-stream = "0.1"
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
mockall = { workspace = true }
wiremock = "0.6"

[features]
default = ["openai"]
openai = []
anthropic = []
google = []
all-providers = ["openai", "anthropic", "google"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "custom_attributes"
path = "examples/custom_attributes.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "cost_tracking"
path = "examples/cost_tracking.rs"
