[tool.poetry]
name = "customer-support-sdk"
version = "0.1.0"
description = "Python SDK for AI Customer Support Platform"
authors = ["Your Organization <dev@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "customer_support_sdk"}]
homepage = "https://github.com/your-org/customer-support"
repository = "https://github.com/your-org/customer-support"
keywords = ["customer-support", "ai", "llm", "sdk"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.26.0"
pydantic = "^2.5.3"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=customer_support_sdk --cov-report=term-missing"
